--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -1,5 +1,6 @@
 log4j.rootLogger=DEBUG,A1
 # example: uncomment this to enable DEBUG-level logging for babel.english.morphology.
+log4j.logger.babel.encyclopedia=INFO,A1
 #log4j.logger.babel.english.morphology=DEBUG,A1
 #log4j.logger.babel.generate=DEBUG,A1
 #log4j.logger.babel.english.morphology=DEBUG,A1
@@ -8,7 +9,7 @@ log4j.rootLogger=DEBUG,A1
 #log4j.logger.babel.index=TRACE,A1
 #log4j.logger.babel.italiano.morphology=DEBUG,A1
 #log4j.logger.babel.italiano.grammar=TRACE,A1
-#log4j.logger.babel.lexiconfn=DEBUG,A1
+log4j.logger.babel.lexiconfn=INFO,A1
 #log4j.logger.babel.over=DEBUG,A1
 #log4j.logger.babel.parse=DEBUG,A1
 #log4j.logger.babel.test.translate=DEBUG,A1
