--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -10,7 +10,7 @@ log4j.rootLogger=INFO,A1
 #log4j.logger.babel.italiano.writer=DEBUG,A1
 #log4j.logger.babel.index=TRACE,A1
 #log4j.logger.babel.italiano.morphology=DEBUG,A1
-#log4j.logger.babel.italiano.grammar=TRACE,A1
+log4j.logger.babel.italiano.grammar=DEBUG,A1
 #log4j.logger.babel.italiano.writer=DEBUG
 #log4j.logger.babel.lexiconfn=DEBUG,A1
 #log4j.logger.babel.parse=DEBUG,A1
