--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -14,7 +14,7 @@ log4j.rootLogger=INFO,A1
 #log4j.logger.babel.italiano.writer=DEBUG
 #log4j.logger.babel.lexiconfn=DEBUG,A1
 #log4j.logger.babel.parse=DEBUG,A1
-log4j.logger.babel.test.it=DEBUG,A1
+#log4j.logger.babel.test.it=DEBUG,A1
 #log4j.logger.babel.test.translate=DEBUG,A1
 #log4j.logger.babel.writer=DEBUG,A1
 
