--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -2,7 +2,7 @@ log4j.rootLogger=INFO,A1
 # example: uncomment this to enable DEBUG-level logging for babel.encyclopedia:
 #log4j.logger.babel.encyclopedia=DEBUG,A1
 #log4j.logger.babel.english.morphology=DEBUG,A1
-#log4j.logger.babel.generate=DEBUG,A1
+log4j.logger.babel.generate=DEBUG,A1
 #log4j.logger.babel.english.morphology=DEBUG,A1
 #log4j.logger.babel.english.grammar=DEBUG,A1
 #log4j.logger.babel.francais.morphology=DEBUG,A1
